--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "version": "1.1.2",
+    "version": "1.1.3",
     "name": "robuust/craft-heroku-internal",
     "description": "Module for internal use with Craft and Heroku",
     "require": {
-        "php": "^7.0",
+        "php": "^7.0 || ^8.0",
         "craftcms/cms": "^3.5.8"
     },
     "autoload": {
