--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,15 @@
 {
-    "version": "1.1.6",
+    "version": "1.2.0",
     "name": "robuust/craft-heroku-internal",
     "description": "Module for internal use with Craft and Heroku",
     "require": {
         "php": "^7.0 || ^8.0",
         "craftcms/cms": "^3.5.8",
-        "craftcms/aws-s3": "^1.3"
+        "craftcms/aws-s3": "^1.3",
+        "php-heroku-client/php-heroku-client": "^4.0"
+    },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.2"
     },
     "autoload": {
         "psr-4": {
