--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "version": "2.3.0",
+    "version": "2.4.0",
     "name": "robuust/craft-heroku-internal",
     "description": "Module for internal use with Craft and Heroku",
     "require": {
-        "php": "^8.0",
+        "php": "^8.3",
         "ext-pcntl": "*",
-        "craftcms/cms": "^4.0",
-        "craftcms/aws-s3": "^2.0",
+        "craftcms/cms": "^4.0|^5.0.0-beta.1",
+        "craftcms/aws-s3": "^2.2",
         "php-heroku-client/php-heroku-client": "^4.0"
     },
     "require-dev": {
