--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "version": "2.5.3",
+    "version": "2.5.4",
     "name": "robuust/craft-heroku-internal",
     "description": "Module for internal use with Craft and Heroku",
     "require": {
         "php": "^8.3",
         "ext-pcntl": "*",
-        "craftcms/cms": "^4.4.8|^5.0.0-beta.1",
+        "craftcms/cms": "^4.4.8|^5.0",
         "craftcms/aws-s3": "^2.2",
         "php-heroku-client/php-heroku-client": "^4.0"
     },
